# wjdr

./: .gitignore  bucheron.json  characters.json  pyproject.toml
resources/rules/: skills.json  talents.json
resources/rules/careers/: agitateur.json  apprenti_sorcier.json  bourgeois.json  bucheron.json  chasseur.json  chasseur_de_primes.json
src/wjdr/models/: models.py  random.py
tests/: conftest.py  test_models.py  test_random.py
tools/: career_extractor.py
