[project]
name = "wjdr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[tool.uv.sources]
wjdr = { workspace = true }

[tool.pytest.ini_options]
markers = ["unitary",
           "integration",
           "e2e",
           "gui"]

[tool.ruff]
line-length = 240

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "wjdr",
]
ocr = [
    "easyocr>=1.7.2",
    "pdf2image>=1.16.3",
]
